<resources>
    <string name="app_name">KeepCalmMobile</string>
    <string name="mensaje1">Pantalla de registro</string>
    <string name="BtnRegistro">Registrarse</string>
    <string name="BtnLogin">Login</string>
    <string name="mensaje2">Funcionalidades</string>
    <string name="BtnAlarma">Activar Alarma</string>
    <string name="BtnAlarmaSil">Alarma Silenciosa</string>
    <string name="mensaje3">Alarma Activada</string>
    <string name="BtnPararAlarma">Parar</string>
    <string name="mensaje4">Alarma Silenciosa Activa</string>
    <string name="BtnPararAlarmaSilenciosa">Parar</string>
    <string name="Guardar">Guardar</string>
    <string name="MensajeTexto">Ayuda me estan robando!</string>

    <!-- NOMBRE DE CAMPOS A REGISTRAR -->
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="DNI">Dni</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Cerrar">Cerrar</string>

    <!-- *************************************-->
    <string name="AlarmaActivada">Alarma Activada</string>
    <string name="ContadorActivacion">La alarma se activara en</string>
    <string name="Activar">Activar</string>
    <string name="msjSinConexion">Sin conexion a internet, intente luego</string>
    <string name="IngresePasswordPararAlarma">Ingrese la password para parar Alarma</string>
    <string name="pantallaLogin">Bienvendio al Login</string>
    <string name="user">Nombre</string>
    <string name="logearse">iniciar</string>
    <string name="historial">Historial actividad</string>
    <string name="btnHistorial">Historial</string>
    <string name="confirmar">Confirmar</string>
    <string name="Contactos">Contactos</string>
    <string name="Numero">Numero</string>

</resources>
